feat(realtimeupdate): testing realtime deployment using github actions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <h1>Testing a eral time update  using github actions</h1>
   </main>
 </body>
 
